# brazilgame

./: .gitignore  CMakeLists.txt  Makefile  build.out  compile_flags.txt
assets/: RestartText.aseprite  Water.aseprite
assets/raw/: Chu.aseprite  EndGameScreen.aseprite  Goat2.aseprite  GoatEast.aseprite  GoatNorth.aseprite  GoatSouth.aseprite  GoatWest.aseprite  Grass.aseprite  Home.aseprite  Man.aseprite  ManEast.aseprite  ManNorth.aseprite  ManSouth.aseprite  ManWest.aseprite  Portal.aseprite  RestartText.aseprite  RockyGrass.aseprite  Saci.aseprite  TitleScreen.aseprite  Tree.aseprite  rock.aseprite  tree2.aseprite
build.out.dSYM/Contents/: Info.plist
build.out.dSYM/Contents/Resources/DWARF/: build.out
include/: ai.hpp  core.hpp  draw.hpp  editor.hpp  input.hpp  level.hpp  render.hpp  settings.hpp  shader.hpp  system.hpp  window.hpp  world.hpp
include/glad/: glad.h
levels/: .lvl  0.lvl  1.lvl  2.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
lib/: glad.cpp
scripts/: a.out  packtext.c
shaders/: bg.fs  bg.vs  block.fs  block.vs
src/: ai.cpp  draw.cpp  editor.cpp  input.cpp  level.cpp  main.cpp  render.cpp  settings.cpp  window.cpp  world.cpp
